CHANGES.txt - 2011-05-20
------------------------

CHANGES IN CUPS V1.5b1

	- Updated the PostScript filter to support IncludeFeature in more
	  circumstances (STR #3417)
	- The schedule did not correctly parse some IPv6 addresses and masks in
	  the cupsd.conf file (STR #3533)
	- Fixed a case-insensitive string comparison issue for locales that do
	  not treat "I" and "i" as equivalent (STR #3800)
	- The scheduler reported an incorrect job-printer-uri value when sharing
	  was not enabled (STR #3639)
	- The scheduler now allows the ServerAlias directive to contain multiple
	  hostnames separated by spaces or commas (STR #3813)
	- The scheduler now sets the process group for child processes and
	  manages the group (STR #2829)
	- Fixed some minor issues discovered by a Coverity scan (STR #3838)
	- The scheduler now more carefully creates and removes configuration,
	  cache, and state files (STR #3715)
	- The lpadmin command now allows default option values to be deleted
	  (STR #2959)
	- The lpadmin command now allows the cupsIPPSupplies and
	  cupsSNMPSupplies keywords to be set in a PPD file (STR #3825)
	- Moving a held job no longer releases it (STR #3839)
	- Restored support for GNU TLS and OpenSSL with threading enabled
	  (STR #3605)
	- Fixed a confusing error message from cups-polld (STR #3806)
	- Increased the default RIPCache value to 128MB (STR #3535)
	- MIME errors are now routed to the error_log file (STR #2410)
	- Updated PDF filter to support new Ghostscript ps2write device
	  (STR #3766)
	- Updated PDF filter to support new Poppler option to preserve page
	  sizes in PDF files when the user has not selected a particular media
	  size (STR #3689)
	- Added new PWG Raster filter for IPP Everywhere printer support.
	- Added job-uuid, printer-uuid, and subscription-uuid attributes.
	- Added support for the cupsSingleFile PPD keyword.
	- Dropped support for the printer-state-history attribute (STR #3654)